[ci skip] Crowdin translation bot: New translations for Greek

--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -260,6 +260,24 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="preset">Προρυθμισμένο</string>
     <string name="foreground">Προσκήνιο</string>
     <string name="background">Υπόβαθρο</string>
+    <string name="set_foreground_or_background_color_hexcolor_also_possible">Ορίστε το προσκήνιο ή το χρώμα φόντου του κειμένου? Είναι επίσης δυνατή η εισαγωγή δεκαεξαδικού χρωματικού κώδικα.</string>
+    <string name="type">Τύπος</string>
+    <string name="folder">Φάκελος</string>
+    <string name="folder_is_created_without_extension">- Ο φάκελος δημιουργείται χωρίς επέκταση αρχείου</string>
+    <string name="keep_existing_file">- Τα αρχεία και οι φάκελοι δεν αντικαθίστανται</string>
+    <string name="multiple_windows">Πολλαπλά παράθυρα</string>
+    <string name="font">Γραμματοσειρά</string>
+    <string name="open_new_documents_always_in_new_window">Άνοιγμα εγγράφων πάντα σε ξεχωριστά παράθυρα. Αλλάξτε χρησιμοποιώντας το πλήκτρο \'πρόσφατα\' της συσκευής σας.</string>
+    <string name="enter_or_select_format">Εισάγετε ή επιλέξτε μορφή</string>
+    <string name="pick_date">Επιλέξτε ημερομηνία</string>
+    <string name="pick_time">Επιλέξτε ώρα</string>
+    <string name="get_format_instead_date_or_time">Χρήση μορφής αντί για ημερομηνία ή ώρα</string>
+    <string name="always_use_current_date_and_time">Να χρησιμοποιείται πάντα η τρέχουσα ημερομηνία &amp; ώρα</string>
+    <string name="result">Αποτέλεσμα</string>
+    <string name="just_time">Μόνο ώρα</string>
+    <string name="just_date">Μόνο ημερομηνία</string>
+    <string name="last_used">Χρήση τελευταίας μορφής</string>
+    <string name="my_note">η_σημείωση_μου</string>
     <string name="close">Κλείσιμο</string>
     <string name="cancel">Ακύρωση</string>
     <string name="do_you_like_this_project_want_donate_to_keep_alive">Σας αρέσει αυτό το έργο? Θέλετε να υποστηρίξετε περαιτέρω βελτιώσεις και διορθώσεις σφαλμάτων?\n\nΗ ανάπτυξη εφαρμογών και η εγγραφή σχετικών δημοσιεύσεων ιστολογίου απαιτούν πολύ χρόνο! Αν θέλετε να βοηθήσετε το έργο να συνεχιστεί, παρακαλώ σκεφτείτε μια μικρή δωρεά!\n\nΑυτό το έργο αναπτύσσεται στον ελεύθερο χρόνο, εντελώς δωρεάν και χωρίς διαφημίσεις!</string>
@@ -287,6 +305,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="favourites">Αγαπημένα</string>
     <string name="please_wait">Παρακαλώ περιμένετε</string>
     <string name="app_start_folder">Φάκελος έναρξης εφαρμογής</string>
+    <string name="tab_width">Μέγεθος στηλοθέτη</string>
+    <string name="amount_of_space_for_tab">Ποσό κενών χαρακτήρων για εμφάνιση στηλοθέτη</string>
     <string name="selected_file_may_be_a_textfile_want_to_open_in_editor">Το επιλεγμένο αρχείο μπορεί να είναι ένα απλό αρχείο κειμένου. Θέλετε να το ανοίξετε στον επεξεργαστή, ή σε άλλη εφαρμογή?\n\nΜην προσπαθήσετε να ανοίξετε δυαδικά αρχεία. Αν δεν είστε σίγουροι, ανοίξτε με άλλη εφαρμογή.</string>
     <string name="list_in_recent_files">Λίστα σε πρόσφατα αρχεία</string>
     <string name="reload">Επαναφόρτωση</string>
@@ -304,6 +324,35 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="record_audio">Εγγραφή Ήχου</string>
     <string name="attach">Επισύναψη</string>
     <string name="copy_file">Αντιγραφή αρχείου</string>
+    <string name="page">Σελίδα</string>
+    <string name="experimental_features">Πειραματικά χαρακτηριστικά</string>
+    <string name="tools">Εργαλεία</string>
+    <string name="reading">Ανάγνωση</string>
+    <string name="read">Ανάγνωση</string>
+    <string name="table">Πίνακας</string>
+    <string name="how_much_columns_press_table_button_long_to_start_table">Πόσες στήλες? Πατήστε το κουμπί του πίνακα παρατεταμένα για να ξεκινήσετε έναν πίνακα (εισαγωγή κεφαλίδας), πατήστε σύντομα για να προσθέσετε μια γραμμή.</string>
+    <string name="example_of_a_markdown_table">Παράδειγμα πίνακα Markdown</string>
+    <string name="delete_lines">Διαγραφή γραμμών</string>
+    <string name="unordered_list">Μη ταξινομημένη λίστα</string>
+    <string name="ordered_list">Ταξινομημένη λίστα</string>
+    <string name="check_list">Λίστα ελέγχου</string>
+    <string name="open_link">Άνοιγμα συνδέσμου</string>
+    <string name="common_color_picker">Επιλογέας χρώματος</string>
+    <string name="date_and_time">Ημερομηνία και ώρα</string>
+    <string name="jump_to_bottom">Μετάβαση στο κάτω μέρος</string>
+    <string name="quote">Παράθεση</string>
+    <string name="heading">Επικεφαλίδα</string>
+    <string name="heading_1">Επικεφαλίδα 1</string>
+    <string name="heading_2">Επικεφαλίδα 2</string>
+    <string name="heading_3">Επικεφαλίδα 3</string>
+    <string name="heading_4">Επικεφαλίδα 4</string>
+    <string name="heading_5">Επικεφαλίδα 5</string>
+    <string name="bold">Έντονα</string>
+    <string name="italic">Πλάγια</string>
+    <string name="highlighted">Επισημασμένα</string>
+    <string name="strikeout">Διακριτή Διαγραφή</string>
+    <string name="inline_code">Εμβόλιμος κωδικός</string>
+    <string name="horizontal_line">Οριζόντια γραμμή</string>
     <string name="load_default_settings">Φόρτωση προεπιλεγμένων ρυθμίσεων</string>
     <string name="drag">Σύρετε</string>
     <string name="created">Δημιουργήθηκε</string>
@@ -314,4 +363,17 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="could_not_decrypt_file_content_wrong_password_or_is_the_file_maybe_not_encrypted">Δεν ήταν δυνατή η αποκρυπτογράφηση περιεχομένου αρχείου. Χρησιμοποιείτε λάθος κωδικό πρόσβασης? Είναι το αρχείο πραγματικά κρυπτογραφημένο με κρυπτογράφηση Markors AES;</string>
     <string name="password_already_set_setting_a_new_password_will_overwrite">Ο κωδικός πρόσβασης έχει ήδη οριστεί. Ο ορισμός νέου κωδικού πρόσβασης θα αντικαταστήσει τον υπάρχοντα κωδικό πρόσβασης και ενδέχεται να μην μπορείτε να έχετε πρόσβαση σε αρχεία πια σε περίπτωση που ξεχάσετε τον κωδικό πρόσβασης.</string>
     <string name="code_block">Μπλοκ κώδικα</string>
+    <string name="add_completion_date">Προσθήκη ημερομηνίας ολοκλήρωσης</string>
+    <string name="add_completion_date_for_todos_when_marking_them_as_done">Προσθήκη ημερομηνίας ολοκλήρωσης για todos κατά τη σήμανσή τους ως ολοκληρωμένα</string>
+    <string name="file_description_format">Μορφή περιγραφής αρχείου</string>
+    <string name="file_description_format_dialog">Μορφή για την περιγραφή κάτω από κάθε αρχείο στο πρόγραμμα περιήγησης αρχείων. Ακολουθεί τους κανόνες SimpleDateFormat του Android, με την προσθήκη του FS για την εμφάνιση του μεγέθους του αρχείου. Αφήστε κενό για να χρησιμοποιήσετε την προεπιλεγμένη μορφή για τον τόπο σας.\n\nΠαράδειγμα εισόδου:\nFS yyyyy MMM dd hh:mm:ss aa\nΜορφή εξόδου:\n30KB 2020 Μαρ 20 11:24:52 μμ</string>
+    <string name="loading_default_value">Φόρτωση προεπιλεγμένης τιμής</string>
+    <string name="file_settings">Ρυθμίσεις αρχείου</string>
+    <string name="search_and_replace">Αναζήτηση / Αντικατάσταση</string>
+    <string name="search_for">Αναζήτηση για</string>
+    <string name="replace_with">Αντικατάσταση με</string>
+    <string name="replace_once">Αντικατάσταση (1)</string>
+    <string name="replace_all">Αντικατάσταση όλων</string>
+    <string name="matches">Αντιστοιχίσεις</string>
+    <string name="search_replace_pattern_error_message">Αναζήτηση ή αντικατάσταση σφάλματος μοτίβου.</string>
 </resources>
