--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -11,7 +11,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
 -->
 <resources xmlns:tools="http://schemas.android.com/tools">
     <string name="settings">Ρυθμίσεις</string>
-    <string name="light">Φωτεινό</string>
+    <string name="light">Ανοικτό</string>
     <string name="dark">Σκοτεινό</string>
     <string name="delete">Διαγραφή</string>
     <string name="appearance">Εμφάνιση</string>
@@ -287,6 +287,9 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="swipe_to_change_to_edit_or_view_mode">Σύρετε για αλλαγή σε λειτουργία επεξεργασίας ή προβολής (αντίθετα από την τρέχουσα λειτουργία)</string>
     <string name="folder_first">Πρώτα ο φάκελος</string>
     <string name="go_to">Μετάβαση σε</string>
+    <string name="appdata_public">AppData (public)</string>
+    <string name="appdata_private">AppData (ιδιωτικό)</string>
+    <string name="appdata_sdcard">AppData (Κάρτα SD)</string>
     <string name="internal_storage">Εσωτερικός αποθηκευτικός χώρος</string>
     <string name="open_the_document_from_main_view">Μπορείτε να ανοίξετε το έγγραφο από την κύρια προβολή στο κάτω μέρος, τον περιηγητή αρχείων ή τον εκκινητή. Υπάρχει επίσης μια επιλογή για την προσθήκη κειμένου που κοινοποιήθηκε στο Markor.</string>
     <string name="notebook_is_the_home_of_your_files">Σημειωματάριο είναι ο φάκελος που το Markor φορτώνει στο πρόγραμμα περιήγησης αρχείων όταν ξεκινά η εφαρμογή. Είναι ο αρχικός φάκελος των αρχείων σας.</string>
@@ -311,6 +314,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="list_in_recent_files">Λίστα σε πρόσφατα αρχεία</string>
     <string name="reload">Επαναφόρτωση</string>
     <string name="wrap_words">Αναδίπλωση λέξεων</string>
+    <string name="soft_break_if_not_fit_to_width_else_enable_horizontal_scrolling">Soft break if text doesn\'t fit to screen width. Else enable horizontal scrolling.</string>
     <string name="recursive_search_in_current_directory">Αναδρομική αναζήτηση στον τρέχοντα κατάλογο. Όταν το ερώτημα περιέχει έναν αστερίσκο (*) χρησιμοποιείται η αναζήτηση regex, αλλιώς ελέγξτε αν το ερώτημα περιέχεται.</string>
     <string name="always_open_with_this_app">Πάντα άνοιγμα με αυτήν την εφαρμογή</string>
     <string name="always_open_files_with_this_app_when_list_contains_file_extension">Πάντα να ανοίγετε αρχεία με αυτήν την εφαρμογή, όταν η λίστα περιέχει την επέκταση αρχείου. Χρησιμοποιήστε \'Κανένα, .html, . ss , .js\' για παράδειγμα, αν θέλετε να επεξεργαστείτε τα αρχεία web και αυτά χωρίς επέκταση αρχείου.</string>
@@ -353,6 +357,21 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="strikeout">Διακριτή Διαγραφή</string>
     <string name="inline_code">Εμβόλιμος κωδικός</string>
     <string name="horizontal_line">Οριζόντια γραμμή</string>
+    <string name="toggle_done">Εναλλαγή ολοκληρωμένων</string>
+    <string name="link_color">Χρώμα συνδέσμου</string>
+    <string name="add_context">Προσθήκη συγκειμένου</string>
+    <string name="add_project">Προσθήκη έργου</string>
+    <string name="archive_completed_tasks">Αρχειοθέτηση ολοκληρωμένων εργασιών</string>
+    <string name="sort_alphabetically">Ταξινόμηση αλφαβητικά</string>
+    <string name="create_new_file_or_folder">Δημιουργία νέου αρχείου ή φακέλου</string>
+    <string name="choose_format">Επιλογή μορφής</string>
+    <string name="selected">Επιλεγμένο</string>
+    <string name="back">Πίσω</string>
+    <string name="expand_collapse">Ανάπτυξη / Σύμπτυξη</string>
+    <string name="essential">Ουσιαστικό</string>
+    <string name="append_human_readable_uuid_to_new_tasks">Προσάρτηση αναγνώσιμου από άνθρωπο UUID σε νέες εργασίες</string>
+    <string name="action_order">Σειρά ενεργειών</string>
+    <string name="toggle_action_visibility">Εναλλαγή ορατότητας ενέργειας</string>
     <string name="load_default_settings">Φόρτωση προεπιλεγμένων ρυθμίσεων</string>
     <string name="drag">Σύρετε</string>
     <string name="created">Δημιουργήθηκε</string>
