--- a/app/src/main/res/values-mk/strings.xml
+++ b/app/src/main/res/values-mk/strings.xml
@@ -38,6 +38,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="share_to_arrow" tools:ignore="TypographyEllipsis">Сподели со&#8230;</string>
     <string name="share">Сподели</string>
     <string name="search">Пребарај</string>
+    <string name="editor">Едитор</string>
+    <string name="folders">Директориуми</string>
     <string name="files">Фајлови</string>
     <string name="document">Документ</string>
     <string name="documents">Документи</string>
@@ -55,17 +57,27 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="select_entries">Избери елемент(и)</string>
     <string name="one_item_selected">Еден елемент избран</string>
     <string name="items_selected_witharg" tools:ignore="PluralsCandidate">%d елементи избрани</string>
+    <string name="hide_statusbar">Сокриј ја лентата за статус</string>
     <string name="name">Име</string>
     <string name="url_or_path">URL / Рута</string>
     <string name="insert_link">Внеси Линк</string>
     <string name="insert_image">Внеси слика</string>
     <string name="contributors">Соработници</string>
+    <string name="save_location">Локација за зачувување</string>
+    <string name="select_storage_folder">Избери директориум за податоци</string>
     <string name="licenses">Лиценци</string>
     <string name="changelog">Листа на промени</string>
     <string name="more_info">Повеќе информации</string>
     <string name="show_license_of_the_app">Покажи лиценца на апликацијата</string>
     <string name="language">Јазик</string>
+    <string name="open_with">Отвори со</string>
+    <string name="sort">Подреди по</string>
+    <string name="date">Датум</string>
     <string name="deleteme____1">Име</string>
+    <string name="size">Големина</string>
+    <string name="reverse_order">Спротивно</string>
+    <string name="contribute">Придонеси</string>
+    <string name="donate">Донирај</string>
     <string name="exit">Излез</string>
     <string name="undo">Поврати</string>
     <string name="redo">Повтори</string>
@@ -81,6 +93,13 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="sync">Синхронизирај</string>
     <string name="save">Зачувај</string>
     <string name="update">Ажурирај</string>
+    <string name="clear">Избриши</string>
+    <string name="archive">Архивирај</string>
+    <string name="add_task">Додади задача</string>
+    <string name="add_x_witharg">Додади %s</string>
+    <string name="refresh">Освежи</string>
+    <string name="create_shortcut">Креирај кратенка</string>
+    <string name="insert_replace_date">Внеси датум</string>
     <string name="format">Формат</string>
     <string name="contexts">Контексти</string>
     <string name="project">Проект</string>
