[ci skip] Crowdin translation bot: New translations for Ukrainian

--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -333,7 +333,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="reading">Читання</string>
     <string name="read">Читати</string>
     <string name="table">Таблиця</string>
-    <string name="how_much_columns_press_table_button_long_to_start_table">Скільки колонок? Тривале натискання кнопки таблиці починає таблицю (вставляє заголовок), коротке — додає рядок.</string>
+    <string name="how_much_columns_press_table_button_long_to_start_table">Скільки стовпців? Тривале натискання кнопки таблиці починає таблицю (вставляє заголовок), коротке натискання для додавання ряду.</string>
     <string name="example_of_a_markdown_table">Приклад таблиці в Markdown</string>
     <string name="delete_lines">Видалити рядки</string>
     <string name="unordered_list">Ненумерований список</string>
