[ci skip] Crowdin translation bot: New translations for Spanish

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -333,7 +333,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="reading">Leyendo</string>
     <string name="read">Leer</string>
     <string name="table">Tabla</string>
-    <string name="how_much_columns_press_table_button_long_to_start_table">¿Cuántas columnas? Mantén pulsado el botón de la tabla para iniciar una tabla (insertar cabecera), pulsa corto para añadir una fila.</string>
+    <string name="how_much_columns_press_table_button_long_to_start_table">¿Cuántas columnas? Presione el botón de tabla para iniciar una tabla (insertar cabecera), presione corto para agregar una fila.</string>
     <string name="example_of_a_markdown_table">Ejemplo de una tabla Markdown</string>
     <string name="delete_lines">Eliminar líneas</string>
     <string name="unordered_list">Lista sin ordenar</string>
