--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -333,7 +333,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="reading">Чтение</string>
     <string name="read">Читать</string>
     <string name="table">Таблица</string>
-    <string name="how_much_columns_press_table_button_long_to_start_table">Сколько колонок? Длинное нажатие на кнопку таблицы начнёт таблицу, вставив заголовок, короткое — добавит строку.</string>
+    <string name="how_much_columns_press_table_button_long_to_start_table">Сколько колонок? Нажмите кнопку таблицы, чтобы запустить таблицу (вставить заголовок), нажмите короткую для добавления строки.</string>
     <string name="example_of_a_markdown_table">Пример Markdown-таблицы</string>
     <string name="delete_lines">Удалить строки</string>
     <string name="unordered_list">Неупорядоченный список</string>
