--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -333,7 +333,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="reading">阅读</string>
     <string name="read">只读</string>
     <string name="table">表格</string>
-    <string name="how_much_columns_press_table_button_long_to_start_table">多少列？长按表格按钮开始一个表格(插入表头)，短按添加行。</string>
+    <string name="how_much_columns_press_table_button_long_to_start_table">多少列？长按桌面按钮来开始一个表 (插入头部)，按短按以添加一行。</string>
     <string name="example_of_a_markdown_table">Markdown 表格示例</string>
     <string name="delete_lines">删除行</string>
     <string name="unordered_list">无序列表</string>
