[ci skip] Crowdin translation bot: New translations for Hungarian

--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -385,4 +385,5 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="replace_once">Csere (1)</string>
     <string name="replace_all">Összes cseréje</string>
     <string name="matches">Találatok</string>
+    <string name="search_replace_pattern_error_message">Hibás kereső kifejezés.</string>
 </resources>
