--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -333,6 +333,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="reading">Okunuyor</string>
     <string name="read">Oku</string>
     <string name="table">Tablo</string>
+    <string name="how_much_columns_press_table_button_long_to_start_table">Kaç sütun var? Bir tablo başlatmak için tablo düğmesine uzun basın (başlık ekleyin), satır eklemek için kısa basın.</string>
     <string name="example_of_a_markdown_table">Markdown tablosu örneği</string>
     <string name="delete_lines">Satırları sil</string>
     <string name="unordered_list">Sırasız liste</string>
