--- a/app/src/main/res/values-bs/strings.xml
+++ b/app/src/main/res/values-bs/strings.xml
@@ -352,6 +352,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="heading_5">Naslov 5</string>
     <string name="bold">Podebljano</string>
     <string name="italic">Kurziv</string>
+    <string name="highlighted">Istaknuto</string>
     <string name="strikeout">Precrtano</string>
     <string name="inline_code">Kōd u sklopu teksta</string>
     <string name="horizontal_line">Vodoravna linija</string>
@@ -372,6 +373,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="toggle_action_visibility">Promijeni vidljivost akcije</string>
     <string name="load_default_settings">Učitaj prvobitne postavke</string>
     <string name="drag">Prevucite</string>
+    <string name="created">Kreirano</string>
     <string name="file_encryption_password">Lozinka za šifriranje</string>
     <string name="no_password_set_cannot_encrypt_decrypt">Nije zadata lozinka, ne može se šifrirati ni dešifrirati.\nOtvorite Podešavanja -&gt; Opće -&gt; Lozinka da zadate lozinku.</string>
     <string name="encrypt_file_content">Šifriraj sadržaj datoteke</string>
@@ -384,6 +386,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="file_description_format">Format opisa datoteke</string>
     <string name="file_description_format_dialog">Format za opis ispod svake datoteke u pregledniku datoteka. Slijedi Androidova SimpleDateFormat pravila, s dodatkom FS za prikazivanje veličine datoteke. Ostavite prazno da biste koristili predefinisani format za Vaše područje.\n\nPrimjer:\nFS yyyy MMM dd hh:mm:ss aa\nRezultat:\n30KB 2020 Mar 20 11:24:52 PM</string>
     <string name="loading_default_value">Učitavam predefinisane vrijednosti</string>
+    <string name="file_settings">Postavke</string>
     <string name="search_and_replace">Traži / zamijeni</string>
     <string name="search_for">Traži</string>
     <string name="replace_with">Zamijeni sa</string>
